# task-flow-api

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
infrastructure/: Dockerfile  database.sql  docker-compose.yml  grants.sql
src/: __init__.py  app.py
src/alembic/: env.py
src/alembic/versions/: c38d266facd8_add_category_and_transactionstatus_.py
src/api/: api.py  auth.py
src/api/routes/: activity.py  customer.py  health.py  project.py
src/connector/: mysql_connector.py
src/core/: config.py
src/models/: __init__.py  activity.py  activity_status.py  customer.py  customer_status.py  project.py  project_status.py
src/repositories/: activity_repository.py  base_repository.py  customer_repository.py  project_repository.py
src/schemas/: activity.py  customer.py  project.py
src/services/: __init__.py  activity.py  base.py  customer.py  project.py
src/shared/: constants.py
src/utils/: logger.py  singleton.py
tests/: conftest.py
tests/integration/: test_activity_endpoint.py  test_customer_endpoint.py  test_project_endpoint.py
tests/unit/: test_activity_service.py  test_app.py  test_check_variables.py  test_customer_service.py  test_project_service.py  test_security.py
