[tool.poetry]
name = "task-flow-api"
version = "0.1.0"
description = ""
authors = ["Gean Duarte <gean_sd@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
cryptography = "^43.0.0"
pymysql = "^1.1.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
faker = "^28.4.1"
pytest-mock = "^3.14.0"
alembic = "^1.13.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
faker = "^28.4.1"
pydocstyle = "^6.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]

test = "pytest -s -x --cov=src -vv"
